<resources>
    <string name="app_name">Astrology_Project_2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_astrology_results">Your Astrology Results!</string>
    <string name="your_results_are">Your Results Are:</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_the_astrology_app">Welcome to the Astrology App!</string>
    <string name="please_enter_your_birth_year">Please enter your birth year:</string>
    <string name="ex_1900">(ex. 1900)</string>
    <string name="please_enter_your_birth_month">Please enter your birth month:</string>
    <string name="ex_1_for_january">(ex. 1 for January)</string>
    <string name="please_enter_your_birth_day">Please enter your birth day:</string>
    <string name="ex_22">(ex. 22)</string>
    <string name="done">Done!</string>
</resources>
