<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1976D2"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#E4D9EE"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="19dp"
            android:fontFamily="casual"
            android:padding="10dp"
            android:text="@string/welcome_to_the_astrology_app"
            android:textAlignment="center"
            android:textColor="#03A9F4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/enterYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="casual"
            android:padding="10dp"
            android:text="@string/please_enter_your_birth_year"
            android:textColor="#2196F3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/yearInt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/ex_1900"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="20sp"
            android:autofillHints="" tools:targetApi="o"/>

        <TextView
            android:id="@+id/enterMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="casual"
            android:padding="10dp"
            android:text="@string/please_enter_your_birth_month"
            android:textColor="#2196F3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/monthInt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/ex_1_for_january"
            android:inputType="number"
            android:padding="10dp"
            android:autofillHints="" tools:targetApi="o"/>

        <TextView
            android:id="@+id/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="casual"
            android:padding="10dp"
            android:text="@string/please_enter_your_birth_day"
            android:textColor="#2196F3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dayInt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/ex_22"
            android:inputType="number"
            android:padding="10dp"
            android:autofillHints="" tools:targetApi="o"/>

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#1976D2"
            android:fontFamily="casual"
            android:padding="10dp"
            android:text="@string/done"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>