<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1976D2"
    tools:context=".ResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#E4D9EE"
        android:orientation="vertical">


        <TextView
            android:id="@+id/astrologyResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="19dp"
            android:fontFamily="casual"
            android:padding="10dp"
            android:text="@string/your_astrology_results"
            android:textAlignment="center"
            android:textColor="#03A9F4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageResults"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:src="@drawable/imgzodiac"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/resultsare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="19dp"
            android:fontFamily="casual"
            android:padding="10dp"
            android:text="@string/your_results_are"
            android:textAlignment="center"
            android:textColor="#03A9F4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/valueStr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#CFA8DF"
            android:fontFamily="casual"
            android:padding="10dp"
            android:shadowColor="#7B1FA2"
            android:textAlignment="center"
            android:textColor="#0288D1"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>


</FrameLayout>